[package]
name = "geoip-server"
version = "0.1.0"
authors = ["Donovan Schönknecht <don@tpyo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
maxminddb = { version = "0.23.0", features = ["mmap"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.3"

[[bin]]
name = "geoip-server"

