[package]
name = "geoip-server"
version = "0.1.0"
authors = ["Donovan Schönknecht <don@tpyo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.6.0", default-features = false, features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["http1", "http2", "tokio"] }
maxminddb = { version = "0.25.0", features = ["mmap"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tokio-test = "0.4.3"

[[bin]]
name = "geoip-server"

