[package]
name = "geoip-server"
version = "0.1.0"
authors = ["Donovan Schönknecht <don@tpyo.net>"]
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false, features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["http1", "http2", "tokio"] }
maxminddb = { version = "0.28.1", features = ["mmap"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "geoip-server"

